# Self-Interpreter

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install.sh
src/client/: #ventana_vm.glade#  CMakeLists.txt  add_lobbies_handler.cpp  add_lobbies_handler.h  canvas_objetos.cpp  canvas_objetos.h  client_error_handler.cpp  client_error_handler.h  client_handler.cpp  client_handler.h  comunicador_server.cpp  comunicador_server.h  connected_client_handler.cpp  connected_client_handler.h  cont_eventos.cpp  cont_eventos.h  cont_vistas.cpp  cont_vistas.h  dismiss_morph_handler.cpp  dismiss_morph_handler.h  drawing_area.cpp  drawing_area.h  enviador.cpp  enviador.h  event_handler.cpp  event_handler.h  event_handler_selector.cpp  event_handler_selector.h  lobby_data_handler.cpp  lobby_data_handler.h  main.cpp  main_view.cpp  main_view.h  model.cpp  model.h  modelo.cpp  modelo.h  morph.cpp  morph.h  morph_object.cpp  (+33 more)
src/server/: CMakeLists.txt  __stdin__  accepter.cpp  accepter.h  aceptador.cpp  aceptador.h  bool.cpp  bool.h  choose_lobby_client_handler.h  client.cpp  client.h  comunicador_cliente.cpp  comunicador_cliente.h  connect_client_handler.cpp  connect_client_handler.h  controlador_eventos.cpp  controlador_eventos.h  distinto.cpp  distinto.h  division.cpp  division.h  do_client_handler.cpp  do_client_handler.h  ejecutar.sh  event_handler.cpp  event_handler.h  event_handler_selector.cpp  event_handler_selector.h  expression.cpp  expression.h  garbage_collector.cpp  get_client_handler.cpp  get_client_handler.h  igual.cpp  igual.h  initialize_client_handler.cpp  initialize_client_handler.h  interpreter.cpp  interpreter.h  lobby.cpp  (+43 more)
src/server/handlers/: change_name_client_handler.cpp  change_name_client_handler.h  choose_lobby_client_handler.cpp  choose_lobby_client_handler.h  connect_client_handler.h  dismiss_client_handler.cpp  dismiss_client_handler.h  do_client_handler.cpp  do_client_handler.h  event_handler.cpp  event_handler.h  event_handler_selector.cpp  event_handler_selector.h  get_client_handler.cpp  get_client_handler.h  initialize_client_handler.h  move_morph_client_handler.cpp  move_morph_client_handler.h  server_handler.cpp  server_handler.h
(+69 files in other folders)
